--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "@testing-library/user-event": "^12.1.10",
     "intersection-observer": "^0.12.0",
     "just-debounce-it": "^1.5.0",
+    "masonry-layout": "^4.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-masonry-css": "^1.0.16",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1",
     "wouter": "^2.7.4"
