--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "formik": "^2.2.8",
     "intersection-observer": "^0.12.0",
     "just-debounce-it": "^1.5.0",
     "masonry-layout": "^4.2.2",
